# AtMap

./: .gitignore  AtMap.rc  CMakeLists.txt  CONTRIBUTING.md  CompassPane.cpp  CompassPane.h  GeoResult.cpp  GeoResult.h  GeoToScreen.cpp  GeoToScreen.h  InfoPane.cpp  InfoPane.h  InfoTreeWidget.cpp  InfoTreeWidget.h  InfoWidget.cpp  InfoWidget.h  IntelliLand.cpp  IntelliLand.h  LandByCoastlineDB.cpp  LandByCoastlineDB.h  LandDB.cpp  LandDB.h  LongLat.cpp  MapManager.cpp  MapManager.h  MapWidget.cpp  MapWidget.h  Planet.cpp  Planet.h  README.md  RedrawReason.h  SearchLocationDialog.cpp  SearchLocationDialog.h  StepSizes.h  User.cpp  User.h  WKTConverter.cpp  WKTConverter.h  WaterDB.cpp  WaterDB.h  (+14 more)
.github/ISSUE_TEMPLATE/: bug_report.md
Documents/: AtMap documentation.html  AtMap documentation.md  Licensing.md  Licensing.txt  licensing.html  pandoc innstruction.txt
Scripts/: SelectBorderingPolygons.sql  SelectContainedPointsFromPolygon.sql  SelectPolygonFromPoint.sql  SelectPolygonNameFromPoint.sql  SelectPolygonsInBoundingBox.sql  SelectSearchResults.sql  UpdateLayerSelected.sql
Scripts/Analysis/: SelectPolygonsInMbr.sql
Scripts/_OSM/: Austria and Belgium.txt  CreateCoastalSimplePolygons.sql  IntersectPolygonsWithCoastlines.sql  SelectBorderingRelationsFromCurrentRelation.sql  SelectBorderingSeas.sql  SelectContainedPointsFromRelation.sql  SelectIfOnLandByCoastline.sql  SelectLandByCoastlinePolygonsInBoundingBox.sql  SelectLandNameFromPoint.sql  SelectPointsInMbr.sql  SelectPolygonsInBoundingBox.sql  SelectSearchResults.sql  SelectSpecificPolygon.sql  SelectVisibleCitiesByCapitalAndPopulation.sql  TempInsertPolygon.sql  UpdateAreas.sql  UpdateRelationCentroidByLargestPolygon.sql  UpdateRelationCentroidByUnion.sql
Scripts/_old/: SelectPolygonsInBoundingBox - earlier version when just one table.sql  SelectPolygonsInBoundingBox all inner joins.sql  SelectPolygonsInBoundingBox before moving to admin level 6.sql
